<resources>
    <string name="app_name">Misfit Challenge</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_store">Store</string>
    <string name="menu_result">Result</string>
    <string name="menu_summary">Summary</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="work_in_progress">Work in progress…</string>
    <string name="loading">Loading, please wait…</string>
    <string name="no_network">No network, please check connection and try again</string>
    <string name="unit_price" formatted="false">Unit price $%s</string>
    <string name="checkout">Checkout</string>

    <string name="total_price">Total Price: $%s</string>
    <string name="make_order">Make Order</string>
    <string name="delivery_address_hints">Please insert delivery address</string>
    <string name="please_add_some_products_to_checkout">Please add some products to checkout</string>
</resources>